Move all error message back to code.ini

--- a/app/msg/code.ini
+++ b/app/msg/code.ini
@@ -1,1 +1,7 @@
-200 = Success
+200 = "Success"
+
+400 = "Requested timestamp ERROR!"
+401 = "Identification Required!"
+402 = "Authorization Required!"
+403 = "Signature Error!"
+404 = "Data Error!"
