Add channel related classes

--- a/app/msg/code.ini
+++ b/app/msg/code.ini
@@ -3,5 +3,6 @@
 400 = "Requested timestamp ERROR!"
 401 = "Identification Required!"
 402 = "Authorization Required!"
-403 = "Signature Error!"
-404 = "Data Error!"
+403 = "Authorization Blocked!"
+404 = "Signature Error!"
+405 = "Data Error!"
